log
Thu 20 Apr 2023 04:35:36 PM UTC: 
 tests:  1|8
total_score: 0/70
c97b0e6
Thu 20 Apr 2023 04:58:30 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:31: error: expected ‘;’ before ‘return’
   43 |   new->lower_than = lower_than
      |                               ^
      |                               ;
   44 |   return new;
      |   ~~~~~~                       
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d520eeb
Thu 20 Apr 2023 04:58:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8836b88
Thu 20 Apr 2023 05:13:11 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8b4373d
Thu 20 Apr 2023 05:13:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e7c38ab
